Opened 11 years ago
Closed 11 years ago
#9958 closed bug (fixed)
Shortcuts preferences not working
Reported by: | humdinger | Owned by: | stpere |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Preferences/Shortcuts | Version: | R1/Package Management |
Keywords: | Cc: | jessicah, dsuden, jscipione | |
Blocked By: | Blocking: | #10897 | |
Platform: | All |
Description
Revision was freshly build by Oliver at BeGeistert 14.09.2013.
You can set shortcuts in the preference panel, but pressing the shortcut does nothing. Works in "normal" Haiku...
Attachments (2)
Change History (24)
comment:1 by , 11 years ago
comment:2 by , 11 years ago
I have found that if i grab "shortcut_catcher" from Haiku Alpha 4 (and I put this file in /boot/home/config/non-packaged/add-ons/input_server/filters), the application "Shortcuts" works again.
comment:3 by , 11 years ago
I can confirm that hrev46164 exhibits the same behaviour (and the workaround works, thanks!)
comment:4 by , 11 years ago
Reportedly the workaround does not work for dsuden but that might be due to different conditions: booting from a USB stick with 46188 on it, putting a somewhat recent (460xx) shortcut_catcher in non-packaged rather than an Alpha4 copy ..etc.
comment:6 by , 11 years ago
I have to correct myself. I have found that only existent shortcuts saved in "Shortcuts" preflet will work again (Shortcuts which i have set up months ago). But if i insert new shortcuts, these will not work. I have to put again an older shortcut_catcher in /boot/home/config/non-packaged/add-ons/input_server/filters.
comment:7 by , 11 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:8 by , 11 years ago
I have now updated to hrev46288. I deleted the shortcuts settings and created my shortcuts from scratch. It does work now. However, only after I restarted the input_server with "/system/server/input_server -q".
If anyone can confirm, this ticket can be closed. And maybe a new one created that has the Shortcut prefs restart the input server (or something to similar effect) when pressing save&apply...
comment:9 by , 11 years ago
On hrev46295, took a fresh install and copied my shortcuts file from hrev46198. Doesn't work. Put shortcut_catcher in the filters, works.
Took another fresh install and did the same. This time instead of the filter workaround, I restarted the input server with -q, and it worked. Furthermore, restarting after that, it still worked. (I never had to delete and recreate from scratch.)
How come it needs the -q though? And why close the ticket if you need to restart the input server for it to work?
comment:10 by , 11 years ago
Tested still broken on hrev46452. gcc2h Did a /boot/system/servers/input_server -q alone and it didn't seem to solve the problem. Looks like a reboot may be needed to really make the changes take effect.
comment:11 by , 11 years ago
Still broken on hrev46670. shortcut_catcher in filters works instantly.
comment:12 by , 11 years ago
Since switching to PM, shortcuts is totally DOA for me. Neither imported shortcut files from previous versions, nor completely fresh batch of shortcuts will work in multiple attempts here. Fix for this is pretty important.
follow-up: 14 comment:13 by , 11 years ago
hrev47209 copying my shortcut file and using the shortcut_catcher as above, as I've scripted into my upgrade procedure a while ago now, still works fine for me. Surprised you're having trouble dsuden, I wonder what the difference is between our setups?
comment:14 by , 11 years ago
Replying to Kev:
hrev47209 copying my shortcut file and using the shortcut_catcher as above, as I've scripted into my upgrade procedure a while ago now, still works fine for me. Surprised you're having trouble dsuden, I wonder what the difference is between our setups?
I also can't get it to work at all. I suspect there might be something extra in your copy of the shortcut file?
It'd be interesting to attach your shortcut file, and also what your configured shortcuts are.
comment:15 by , 11 years ago
Blocking: | 10897 added |
---|
(In #10897) Please add yourself to cc on ticket 9958 for updates (not sure if this is something I can do...)
comment:16 by , 11 years ago
Cc: | added |
---|
comment:17 by , 11 years ago
Cc: | added |
---|
comment:18 by , 11 years ago
dsuden uses the "reversed modifiers" setting, if that matters (i.e. he's configured to type Ctrl-C/Ctrl-V to copy-paste instead of Alt-C/Alt-V).
comment:20 by , 11 years ago
I have a shortcuts_settings file backup that I keep restoring everytime I update Haiku. I have now (hrev47314) tried to just create my shortcuts from scratch: remove the old, reboot - no working shortcuts, as expected. Created new shortcuts (OPT+Space: QuickLaunch, OPT+F1: Einsteinium Launcher, OPT+F: Tracker Find). Doesn't work right away, but did so after a reboot.
FWIW, the old and the new shortcuts_settings files are 100% identical...
comment:21 by , 11 years ago
Cc: | added |
---|
comment:22 by , 11 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Fixed in hrev47362. Note that this doesn't address the issue with path/node monitoring.
hrev46154 (a new nightly build which include the PM branch): The application "Shortcuts" still no works.